[Test fix]: Increasing heap allocation for test executor for samza-core tests after Gradle 5 upgrade